--- a/Social Media Website project main/linkedIn.html
+++ b/Social Media Website project main/linkedIn.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <title>LinkedIn</title>
-      <link rel="stylesheet" type="text/css" href="style.css">
+      <link rel="stylesheet" type="text/css" href="css/style.css">
       <meta charset="utf-8">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    </head>
