--- a/Social Media Website project main/form.html
+++ b/Social Media Website project main/form.html
@@ -2,14 +2,14 @@
 <html lang="en">
    <head>
       <title>Application Form</title>
-      <link rel="stylesheet" type="text/css" href="style.css">
+      <link rel="stylesheet" type="text/css" href="css/style.css">
       <meta charset="utf-8">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    </head>
    <!--This is the navigation-->
    <body>
       <nav>
-         <a href="https://tudublin.ie/"><img alt="TU Dublin Logo" class="logo" src="image/TUDublin_Logo_RGB-1024x645.png"/></a>
+         <a href="https://tudublin.ie/"><img alt="TU Dublin Logo" class="logo" src="css/images/TUDublin_Logo_RGB-1024x645.png"/></a>
          <ul>
             <li>
                <a href="index.html">Home</a>
