--- a/Social Media Website project main/linkedIn_info.html
+++ b/Social Media Website project main/linkedIn_info.html
@@ -9,7 +9,7 @@
    <!--This is the navigation-->
    <body>
       <nav>
-         <a href="https://tudublin.ie/"><img alt="TU Dublin Logo" class="logo" src="image/TUDublin_Logo_RGB-1024x645.png"/></a>
+         <a href="https://tudublin.ie/"><img alt="TU Dublin Logo" class="logo" src="css/images/TUDublin_Logo_RGB-1024x645.png"/></a>
          <ul>
             <li>
                <a href="index.html">Home</a>
@@ -56,7 +56,7 @@
             <h2 id="introduction2">Introduction</h2>
          </div>
          <div class="col-2">
-            <img class="img2" src="image/linkedin-pic1.jpg" alt="linkedIn headquarter">
+            <img class="img2" src="css/images/linkedin-pic1.jpg" alt="linkedIn headquarter">
             <h2 class="par">Headquarter Sunnyvale, California, Us</h2>
             <p>
                LinkedIn is an American business and employment-oriented service that operates via websites and mobile apps. Founded on December 28, 2002 by Reid Hoffman, Allen Blue, Konstantin Guerick and Jeff Weiner.
@@ -86,11 +86,11 @@
             </p>
          </div>
          <div class="col-6">
-            <img class="img3" src="image/linkedin-pic5.png" alt="image of LinkedIn website">
+            <img class="img3" src="css/images/linkedin-pic5.png" alt="image of LinkedIn website">
          </div>
          <div class="col-7">
-            <img class="img3" src="image/linkedin-pic6.png" alt="continuation  image of signing up for linkedIn">
-            <img class="img4" src="image/linkedin-pic7.png" alt="continuation image of signing up for linkedIn">
+            <img class="img3" src="css/images/linkedin-pic6.png" alt="continuation  image of signing up for linkedIn">
+            <img class="img4" src="css/images/linkedin-pic7.png" alt="continuation image of signing up for linkedIn">
          </div>
          <div class="col-8">
             <p>
@@ -111,7 +111,7 @@
             </p>
          </div>
          <div class="col-7">
-            <img class="img3" src="image/linkedin-pic10.png" alt="creating your profile information">
+            <img class="img3" src="css/images/linkedin-pic10.png" alt="creating your profile information">
          </div>
          <div  id="linkedin-video" class="col-9">
             <h1><a href="https://www.youtube.com/watch?v=y_SVqfoGrBE&feature=youtu.be" class="text-decoration2">LINKEDIN VIDEO</a></h1>
@@ -120,7 +120,7 @@
             <h2>For Education</h2>
          </div>
          <div class="col-13">
-            <img class="img5" src="image/linkedin-pic4.jpg" alt="linkedIn poster">
+            <img class="img5" src="css/images/linkedin-pic4.jpg" alt="linkedIn poster">
          </div>
          <div class="col-14">
             <p>By introducing  LinkedIn to first year students, it will expose them to the workforce where they can build themselves as they use the skills, they develop through their course in various projects inside and outside  third level institutions. Through LinkedIn, they can follow the example of renowned and established professionals and strive for their own ambitions and goals.  - JRL
