--- a/Social Media Website project main/pinterest_info.html
+++ b/Social Media Website project main/pinterest_info.html
@@ -9,7 +9,7 @@
    <!--This is the navigation-->
    <body>
       <nav>
-         <a href="https://tudublin.ie/"><img alt="TU Dublin Logo" class="logo" src="image/TUDublin_Logo_RGB-1024x645.png"/></a>
+         <a href="https://tudublin.ie/"><img alt="TU Dublin Logo" class="logo" src="css/images/TUDublin_Logo_RGB-1024x645.png"/></a>
          <ul>
             <li>
                <a href="index.html">Home</a>
@@ -64,10 +64,10 @@
          </p>
       </div>
       <div class="column-2">
-         <img class="app2" src="image/pinterest-img1.jpg" alt="phone image with pinterest website open">
+         <img class="app2" src="css/images/pinterest-img1.jpg" alt="phone image with pinterest website open">
       </div>
       <div class="column-3">
-         <img class="app2" src="image/pinterest-img2.jpg" alt="phone image with pinterest website open">
+         <img class="app2" src="css/images/pinterest-img2.jpg" alt="phone image with pinterest website open">
       </div>
       <div class="column-4">
          <h3 class="middle">What is Pinterest?</h3>
@@ -91,23 +91,23 @@
          </p>
       </div>
       <div class="column-6">
-         <img id="phone" src="image/pinterest-img3.png" alt="Pinterest image signing in">
+         <img id="phone" src="css/images/pinterest-img3.png" alt="Pinterest image signing in">
       </div>
       <!--How to use the App-->
       <div class="title">
          <h2 id="how-to-use3">How to use the App/Tool</h2>
       </div>
        <div class="column-12">
-           <img class="images" src="image/Pinterest1.png" alt="how to use part 1">
+           <img class="images" src="css/images/Pinterest1.png" alt="how to use part 1">
        </div>
        <div class="column-12">
-           <img class="images" src="image/pinterest2.png" alt="how to use part 2">
+           <img class="images" src="css/images/pinterest2.png" alt="how to use part 2">
        </div>
        <div class="column-12">
-           <img class="images" src="image/pinterest3.png" alt="how to use part 3">
+           <img class="images" src="css/images/pinterest3.png" alt="how to use part 3">
        </div>
       <div class="column-7"> <a href="https://www.youtube.com/watch?v=dwFAdTOAOHc">
-         <img  id="image-video1" src="image/pinterest-img13.png" alt="CDM logo link to YouTube video">
+         <img  id="image-video1" src="css/images/pinterest-img13.png" alt="CDM logo link to YouTube video">
          </a>
       </div>
       <!--How to use the app for education-->
