--- a/Social Media Website project main/sitemap.html
+++ b/Social Media Website project main/sitemap.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Site-map</title>
+      <title>Pinterest Information</title>
       <link rel="stylesheet" type="text/css" href="css/style.css">
       <meta charset="utf-8">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    </head>
    <body>
       <nav>
-         <img alt="TU Dublin Logo" class="logo" src="image/TUDublin_Logo_RGB-1024x645.png"/>
+         <img alt="TU Dublin Logo" class="logo" src="css/images/TUDublin_Logo_RGB-1024x645.png"/>
          <ul>
             <li>
                <a href="index.html">Home</a>
