--- a/Social Media Website project main/slack_info.html
+++ b/Social Media Website project main/slack_info.html
@@ -9,7 +9,7 @@
    <!--This is the navigation-->
    <body>
       <nav>
-         <img alt="TU Dublin Logo" class="logo" src="image/TUDublin_Logo_RGB-1024x645.png"/>
+         <img alt="TU Dublin Logo" class="logo" src="css/images/TUDublin_Logo_RGB-1024x645.png"/>
          <ul>
             <li>
                <a href="index.html">Home</a>
@@ -65,7 +65,7 @@
             </p>
          </div>
          <div class="item-3">
-            <img class="img" src="image/slack.logo.jpg" alt="slack logo">
+            <img class="img" src="css/images/slack.logo.jpg" alt="slack logo">
          </div>
           <!--How to Register-->
          <div class="item-4">
@@ -77,9 +77,9 @@
             </p>
          </div>
          <div class="item-7">
-            <img id="img1" class="img" src="image/slackinfo1.png" alt="informatin on how to register for Slack">
-            <img  class="img" src="image/slackinfo2.png" alt="informatin on how to register for Slack">
-            <img  class="img" src="image/slackinfo3.png" alt="informatin on how to register for Slack">
+            <img id="img1" class="img" src="css/images/slackinfo1.png" alt="informatin on how to register for Slack">
+            <img  class="img" src="css/images/slackinfo2.png" alt="informatin on how to register for Slack">
+            <img  class="img" src="css/images/slackinfo3.png" alt="informatin on how to register for Slack">
          </div>
          <div class="item-6">
             <ol>
@@ -104,7 +104,7 @@
             <h2 id="howtouse">How to use the App/Tool</h2>
          </div>
          <div class="item-9">
-            <img  class="img" src="image/slackinfo4.png" alt="information on how to use the application">
+            <img  class="img" src="css/images/slackinfo4.png" alt="information on how to use the application">
          </div>
          <div class="item-10">
             <p>
@@ -139,8 +139,8 @@
             <p class="par">One way that Slack can be used for teaching is through the creation of study groups when making groups assignments. This way, groups can communicate and help each other in the comfort of their own homes. They can easily send files and emails to each other, exchange ideas and get feedback from group members. Since communication in Slack is instant, you don’t have to worry about any lags.</p>
          </div>
          <div class="item-22">
-            <img class="img" src="image/slackinfo5.png" alt="informatin on how to use slack for learning/teaching">
-            <img class="img" src="image/slackinfo6.png" alt="informatin on how to use slack for learning/teaching">
+            <img class="img" src="css/images/slackinfo5.png" alt="informatin on how to use slack for learning/teaching">
+            <img class="img" src="css/images/slackinfo6.png" alt="informatin on how to use slack for learning/teaching">
          </div>
           <!--Caution and safety-->
          <div class="item-18">
