--- a/Social Media Website project main/tumblr_info.html
+++ b/Social Media Website project main/tumblr_info.html
@@ -9,7 +9,7 @@
     <!--This is the navigation-->
    <body>
       <nav>
-         <a href="https://tudublin.ie/"><img alt="TU Dublin Logo" class="logo" src="image/TUDublin_Logo_RGB-1024x645.png"/></a>
+         <a href="https://tudublin.ie/"><img alt="TU Dublin Logo" class="logo" src="css/images/TUDublin_Logo_RGB-1024x645.png"/></a>
          <ul>
             <li>
                <a href="index.html">Home</a>
@@ -90,8 +90,8 @@
            </p>
        </div>
         <div  class="col6">
-           <img class="pics" src="image/Tumblr-img1.jpg" alt="tumblr log in website">
-           <img class="pic1" src="image/tumblr-img2.png" alt="tumblr log in on the phone">
+           <img class="pics" src="css/images/Tumblr-img1.jpg" alt="tumblr log in website">
+           <img class="pic1" src="css/images/tumblr-img2.png" alt="tumblr log in on the phone">
        </div>
         <!--How do you register-->
         <div class="col7">
@@ -101,12 +101,12 @@
        </p>
        </div>
        <div  class="col8">
-           <img class="pics" src="image/tumblr-img3.jpg" alt="update">
-           <img class="pics" src="image/tumblr-img4.jpg" alt="confirm age">
+           <img class="pics" src="css/images/tumblr-img3.jpg" alt="update">
+           <img class="pics" src="css/images/tumblr-img4.jpg" alt="confirm age">
        </div>
        <div  class="col9">
-          <img class="pics" src="image/tumblr-img5.jpg" alt="interest">
-           <img class="pics" src="image/tumblr-img6.jpg" alt="topics">
+          <img class="pics" src="css/images/tumblr-img5.jpg" alt="interest">
+           <img class="pics" src="css/tumblr-img6.jpg" alt="topics">
        </div>
        <div  class="col10">
            <p>
@@ -119,8 +119,8 @@
            </p>
        </div>
        <div  class="col12">
-           <img class="pics" src="image/tumblr-img7.jpg" alt="welcome">
-           <img class="pics" src="image/tumblr-img8.jpg" alt="basic information">
+           <img class="pics" src="css/images/tumblr-img7.jpg" alt="welcome">
+           <img class="pics" src="css/images/tumblr-img8.jpg" alt="basic information">
        </div>
        <div  class="col5">
            <p>
@@ -128,8 +128,8 @@
            </p>
        </div>
        <div  class="col6">
-           <img  class="pics" src="image/tumblr-img9.jpg" alt="profile">
-           <img  class="pic1" src="image/tumblr-img10.png" alt="profile">
+           <img  class="pics" src="css/images/tumblr-img9.jpg" alt="profile">
+           <img  class="pic1" src="css/images/tumblr-img10.png" alt="profile">
        </div>
            <!--how to use the app-->
            <!--In this section, I decided not to insert any images because they areso many and have a lot of information so i choose to put more information instead-->
@@ -137,7 +137,7 @@
            <h3 id="how-to-use4">How to use the App/Tool</h3>
        </div>
        <div  class="col14">
-           <img class="pic1" src="image/tumblr-img11.png" alt="newsfeed">
+           <img class="pic1" src="css/images/tumblr-img11.png" alt="newsfeed">
        </div>
        <div  class="col10">
            <p class="par2">
