--- a/Social Media Website project main/about_me.html
+++ b/Social Media Website project main/about_me.html
@@ -9,7 +9,7 @@
    <!--This is the navigation-->
    <body>
       <nav>
-         <a href="https://tudublin.ie/"><img alt="TU Dublin Logo" class="logo" src="image/TUDublin_Logo_RGB-1024x645.png"/></a>
+         <a href="https://tudublin.ie/"><img alt="TU Dublin Logo" class="logo" src="css/images/TUDublin_Logo_RGB-1024x645.png"/></a>
          <ul>
             <li>
                <a href="index.html">Home</a>
@@ -55,7 +55,7 @@
             About Me
          </header>
          <figure>
-            <img id="profile" src="image/profile.jpg" alt="profile image">
+            <img id="profile" src="css/images/profile.jpg" alt="profile image">
          </figure>
          <div class="profile">
             <aside>
