--- a/Social Media Website project main/index.html
+++ b/Social Media Website project main/index.html
@@ -9,7 +9,7 @@
     <!--This is the navigation-->
    <body>
       <nav>
-         <a href="https://tudublin.ie/"><img alt="TU Dublin Logo" class="logo" src="image/TUDublin_Logo_RGB-1024x645.png"/></a>
+         <a href="https://tudublin.ie/"><img alt="TU Dublin Logo" class="logo" src="css/images/TUDublin_Logo_RGB-1024x645.png"/></a>
          <ul>
             <li>
                <a href="index.html">Home</a>
@@ -51,7 +51,7 @@
       <header>Hello</header>
       <p id="header">Welcome to Social Media Tools!</p>
        
-       <img id="home-image" src="image/homepagepic.JPG" alt="a rainbow table">
+       <img id="home-image" src="css/images/homepagepic.JPG" alt="a rainbow table">
        
        <section id="home">
             <h3 id="home-heading2">Website Introduction</h3>
