--- a/Social Media Website project main/instagram_info.html
+++ b/Social Media Website project main/instagram_info.html
@@ -9,7 +9,7 @@
    <!--This is the navigation-->
    <body>
       <nav>
-         <a href="https://tudublin.ie/"><img alt="TU Dublin Logo" class="logo" src="image/TUDublin_Logo_RGB-1024x645.png"/></a>
+         <a href="https://tudublin.ie/"><img alt="TU Dublin Logo" class="logo" src="css/images/TUDublin_Logo_RGB-1024x645.png"/></a>
          <ul>
             <li>
                <a href="index.html">Home</a>
@@ -60,7 +60,7 @@
             </p>
          </div>
          <div class="column3">
-            <a href="https://www.instagram.com/"><img id="instainfo-logo" src="image/Instagram.logo.webp" alt="instagram logo"></a>
+            <a href="https://www.instagram.com/"><img id="instainfo-logo" src="css/images/Instagram.logo.webp" alt="instagram logo"></a>
          </div>
           <!--Registration-->
          <div class="column4">
