--- a/Social Media Website project main/linkedIn.html
+++ b/Social Media Website project main/linkedIn.html
@@ -9,7 +9,7 @@
    <!--This is the navigation-->
    <body>
       <nav>
-         <a href="https://tudublin.ie/"><img alt="TU Dublin Logo" class="logo" src="image/TUDublin_Logo_RGB-1024x645.png"/></a>
+         <a href="https://tudublin.ie/"><img alt="TU Dublin Logo" class="logo" src="css/images/TUDublin_Logo_RGB-1024x645.png"/></a>
          <ul>
             <li>
                <a href="index.html">Home</a>
@@ -50,23 +50,23 @@
      <!-- this is the header-->
     <!-- I used inline styling on this page because the background color wasnt working in the css and the icons rhat i used here was created by me.-->
       <div>
-          <img alt="linkedin logo" id="linkedin" src="image/Linkedin.logo.png"/>
+          <img alt="linkedin logo" id="linkedin" src="css/images/Linkedin.logo.png"/>
       </div>
       <div class="row">
          <div class="column" style="background-color:#be375f">
-            <img alt="introduction icon" class="intro" src="image/introduction.png"/>
+            <img alt="introduction icon" class="intro" src="css/images/introduction.png"/>
             <h2 class="headings"><a href="linkedIn_info.html#introduction2" class="text-decoration">Introduction</a></h2>
          </div>
          <div class="column" style="background-color:#be375f">
-            <img alt="register icon" class="register" src="image/register.png"/>
+            <img alt="register icon" class="register" src="css/images/register.png"/>
             <h2 class="headings"><a href="linkedIn_info.html" class="text-decoration">Registration</a></h2>
          </div>
          <div class="column" style="background-color:#be375f">
-            <img alt="how to use icon" class="instruction" src="image/instruction.png"/>
+            <img alt="how to use icon" class="instruction" src="css/images/instruction.png"/>
             <h2 class="headings"><a href="linkedIn_info.html#how-to-use2" class="text-decoration">How to use</a></h2>
          </div>
          <div class="column" style="background-color:#be375f">
-            <img alt="safety and caution icon" class="caution" src="image/Caution&Safety.png"/>
+            <img alt="safety and caution icon" class="caution" src="css/images/Caution&Safety.png"/>
             <h2 class="headings"><a href="linkedIn_info.html#cautions2" class="text-decoration">Safety and Cautions</a></h2>
          </div>
       </div>
