--- a/Social Media Website project main/slack.html
+++ b/Social Media Website project main/slack.html
@@ -9,7 +9,7 @@
    <!--This is the navigation-->
    <body>
       <nav>
-         <a href="https://tudublin.ie/"><img alt="TU Dublin Logo" class="logo" src="image/TUDublin_Logo_RGB-1024x645.png"/></a>
+         <a href="https://tudublin.ie/"><img alt="TU Dublin Logo" class="logo" src="css/images/TUDublin_Logo_RGB-1024x645.png"/></a>
          <ul>
             <li>
                <a href="index.html">Home</a>
@@ -50,25 +50,25 @@
       <!-- this is the header-->
     <!-- I used inline styling on this page because the background color wasnt working in the css and the icons rhat i used here was created by me.-->
       <div>
-         <img alt="slack logo" id="slack" src="image/slack.logo.jpg"/>
+         <img alt="slack logo" id="slack" src="css/images/slack.logo.jpg"/>
       </div>
       <div class="row">
          <div class="column" style="background-color:#a2d5ab;">
-            <img alt="introduction icon" class="intro" src="image/introduction.png">
+            <img alt="introduction icon" class="intro" src="css/images/introduction.png">
             <h2 class="headings">
                 <a href="slack_info.html#introduction" class="text-decoration">Introduction</a>
             </h2>
          </div>
          <div class="column" style="background-color:#a2d5ab;">
-            <img alt="register icon" class="register" src="image/register.png">
+            <img alt="register icon" class="register" src="css/images/register.png">
             <h2 class="headings"><a href="slack_info.html#registration" class="text-decoration">Registration</a></h2>
          </div>
          <div class="column" style="background-color:#a2d5ab;">
-            <img alt="how to use icon" class="instruction" src="image/instruction.png">
+            <img alt="how to use icon" class="instruction" src="css/images/instruction.png">
             <h2 class="headings"><a href="slack_info.html#howtouse" class="text-decoration">How to use</a></h2>
          </div>
          <div class="column" style="background-color:#a2d5ab;">
-            <img alt="safety and caution icon" class="caution" src="image/Caution&Safety.png">
+            <img alt="safety and caution icon" class="caution" src="css/images/Caution&Safety.png">
             <h2 class="headings"><a href="slack_info.html#cautions" class="text-decoration">Safety and Cautions</a></h2>
          </div>
       </div>
